fix: cursor type and rm extra padding

--- a/blocks/card/__description/card__description.css
+++ b/blocks/card/__description/card__description.css
@@ -1,8 +1,9 @@
 .card__description {
   display: flex;
-  padding: 25px 15px 31px 21px;
+  padding-bottom: 29px;
   margin: 0 auto;
   justify-content: space-between;
   max-width: 246px;
   min-height: 23px;
+  cursor: pointer;
 }
